# gqf-artifacts

./: .gitignore  .salloc_10.sh.swp  CMakeCache.txt  CMakeLists.txt  CMakeListsexam.txt  CMakeSettings.json  DartConfiguration.tcl  Makefile  README.md  array_test.batch  ba.batch  cmake_install.cmake  instructions.txt  make_debug  make_volatile  memcheck.batch  modules.sh  oldmake  salloc_10.sh  slurm-2000723.out  test  test.batch  test.out  test_battery.batch  test_pc  test_threadsafe
include/: MurmurHash3.cuh  approx_wrapper.cuh  bloom.cuh  bloom_filter.hpp  bloom_one_bit.cuh  bloom_one_bit_wrapper.cuh  bloom_wrapper.cuh  cpu_bf_wrapper.h  cpu_bloom_filter.hpp  cpu_one_bit_bloom_filter.hpp  cu_wrapper.cuh  gqf.cuh  gqf.h  gqf_call.cuh  gqf_file.cuh  gqf_int.cuh  gqf_wrapper.cuh  hashutil.cuh  mhm2_hash_wrapper.cuh  mhm2_map.cuh  owens_wrapper.cuh  partitioned_counter.cuh  point_wrapper.cuh  quotientFilter.cuh  rsqf_wrapper.cuh  sqf_wrapper.cuh  zipf.cuh
latex_files/: artifact_figures.tex  defines.tex  includes.tex  title.tex
latex_files/figures/: 22_comparison.tex  24_comparison.tex  26_comparison.tex  28_comparison.tex  30_comparison.tex  32_comparison.tex  aggregate_plots.tex  plots.tex
results/aggregate/: bloom-aggregate-exists-lookup.txt  bloom-aggregate-false-lookup.txt  bloom-aggregate-insert.txt  gqf-aggregate-exists-lookup.txt  gqf-aggregate-false-lookup.txt  gqf-aggregate-insert.txt  point-aggregate-exists-lookup.txt  point-aggregate-false-lookup.txt  point-aggregate-insert.txt  rsqf-aggregate-exists-lookup.txt  rsqf-aggregate-false-lookup.txt  rsqf-aggregate-insert.txt  sqf-aggregate-exists-lookup.txt  sqf-aggregate-false-lookup.txt  sqf-aggregate-insert.txt
results/bloom/: 22-exists-lookup.txt  22-false-lookup.txt  22-insert.txt  24-exists-lookup.txt  24-false-lookup.txt  24-insert.txt  26-exists-lookup.txt  26-false-lookup.txt  26-insert.txt  28-exists-lookup.txt  28-false-lookup.txt  28-insert.txt  30-exists-lookup.txt  30-false-lookup.txt  30-insert.txt  32-exists-lookup.txt  32-false-lookup.txt  32-insert.txt
results/gqf/: 22-exists-lookup.txt  22-false-lookup.txt  22-insert.txt  24-exists-lookup.txt  24-false-lookup.txt  24-insert.txt  26-exists-lookup.txt  26-false-lookup.txt  26-insert.txt  28-exists-lookup.txt  28-false-lookup.txt  28-insert.txt  30-exists-lookup.txt  30-false-lookup.txt  30-insert.txt  32-exists-lookup.txt  32-false-lookup.txt  32-insert.txt
results/point/: 22-exists-lookup.txt  22-false-lookup.txt  22-insert.txt  24-exists-lookup.txt  24-false-lookup.txt  24-insert.txt  26-exists-lookup.txt  26-false-lookup.txt  26-insert.txt  28-exists-lookup.txt  28-false-lookup.txt  28-insert.txt  30-exists-lookup.txt  30-false-lookup.txt  30-insert.txt  32-exists-lookup.txt  32-false-lookup.txt  32-insert.txt
results/rsqf/: 22-exists-lookup.txt  22-false-lookup.txt  22-insert.txt  24-exists-lookup.txt  24-false-lookup.txt  24-insert.txt  26-exists-lookup.txt  26-false-lookup.txt  26-insert.txt
results/sqf/: 22-exists-lookup.txt  22-false-lookup.txt  22-insert.txt  24-exists-lookup.txt  24-false-lookup.txt  24-insert.txt  26-exists-lookup.txt  26-false-lookup.txt  26-insert.txt
src/: .test.cu.swp  CMakeCache.txt  CMakeLists.txt  Makefile  MurmurHash3.cu  RSQF.cu  bm.c  bm.cu  bm_gpu_only.cu  cluster_length_test.cu  cmake_install.cmake  gqf.c  gqf.cu  gqf_broke.c  gqf_call.cu  gqf_file.cu  gqf_only.cu  gqf_verify.cu  hashutil.cu  partitioned_counter.cu  quotientFilter.cu  sqf.cu  test.c  test.cpp  test.cu  test_partitioned_counter.cu  test_threadsafe.c  test_threadsafe.cu  zipf.cu
